gateways/realtimeUse/gt-vs/servicefile.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: SERVICE_NAME
  name: SERVICE_NAME-deployment
  namespace: NAME_SPACE
spec:
  # replicas: 1
  selector:
    matchLabels:
      app: SERVICE_NAME
  template:
    metadata:
      labels:
        app: SERVICE_NAME
    spec:
      containers:
      - image: AWS_ACCOUNT_ID.dkr.ecr.AWS_DEFAULT_REGION.amazonaws.com/IMAGE_REPO_NAME:IMAGE_TAG
        imagePullPolicy: IfNotPresent
        name: SERVICE_NAME
        # resources: {}
        ports:
        - containerPort: SERVICE_PORT
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: SERVICE_NAME
  name: SERVICE_NAME
  namespace: NAME_SPACE
spec:
  ports:
  - port: 80
    name: http-SERVICE_NAME
    protocol: TCP
    targetPort: SERVICE_PORT
  selector:
    app: SERVICE_NAME
  type: NodePort
